--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: "Neko Boi Nick"
-description: "Portfolio"
+title: Neko Boi Nick
+description: Portfolio
 show_downloads: "false"
