--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,11 @@ show_downloads: false
 
 minima:
   skin: solarized-dark
+
+minima:
+  date_format: "%b %-d, %Y"
+
+header_pages:
+  - index.md
+  - portfolio.md
+
