--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ minima:
   social_links:
     twitter: thakyZ
     github: thakyZ
+    stackoverflow: "1112800"
     
     # GitLab Instances
     gitlab:
