--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: ***REMOVED***
+title: Neko Boi Nick
 
 author:
-  name: ***REMOVED***
+  name: Neko Boi Nick
   email: "nekoboinick@gmail.com"
 
 description: > # this means to ignore newlines until "show_excerpts:"
-  ***REMOVED***'s portfolio for carrier exploration after and during college.
+  's portfolio for carrier exploration after and during college.
   Nick is studying Information Technology, specifically Linux Server
   Administration. Please contact him if you are interested in some form of
   Carrier for him in the field he is studying for.
