--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author:
   email: "nekoboinick@gmail.com"
 
 description: > # this means to ignore newlines until "show_excerpts:"
-  's portfolio for carrier exploration after and during college.
+  Nick Mullally's portfolio for carrier exploration after and during college.
   Nick is studying Information Technology, specifically Linux Server
   Administration. Please contact him if you are interested in some form of
   Carrier for him in the field he is studying for.
